# SplitCommander

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: build.yml  release.yml
docs/plans/: 2026-02-23-per-file-sync-actions-design.md  2026-02-23-per-file-sync-actions.md
e2e/: smoke.spec.ts  tauri-mock.ts
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: commands.rs  compare.rs  events.rs  export.rs  fileops.rs  ignore.rs  mod.rs  model.rs  pty.rs  scan.rs  security.rs
src/lib/: types.ts
src/lib/components/: BottomBar.svelte  BrowsePane.svelte  ComparePane.svelte  DiffBadge.svelte  DiffDetails.svelte  FilePane.svelte  ProgressIndicator.svelte  TerminalPanel.svelte  TopBar.svelte
src/lib/stores/: compare.svelte.ts  terminal.svelte.ts
