[package]
name = "split-commander"
version = "0.1.0"
description = "A keyboard-first two-pane file manager with directory comparison"
authors = ["you"]
edition = "2021"

[lib]
name = "split_commander_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwalk = "0.8"
glob-match = "0.2"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt"] }
dirs = "6.0.0"
open = "5.3.3"
